View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030474 | Open CASCADE | OCCT:Visualization | public | 2019-02-04 14:08 | 2019-03-05 13:46 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.4.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030474: Visualization - fallback font is ignored for missing font alias within Font_FontMgr::FindFont() | ||||
Description | Due to error in Font_FontMgr::FindFont() logic (0030439), the fallback font is not returned in case if font alias has been requested by user, but no font was actually found in system for this alias (as result UNDEFINED font is returned). | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR30474 has been created by kgv. SHA-1: 5eb3d759254d5bed3e21feef1116c8b4ca7efb5d Detailed log of new commits: Author: kgv Date: Mon Feb 4 14:04:21 2019 +0300 0030474: Visualization - fallback font is ignored for missing font alias within Font_FontMgr::FindFont() |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30474-master-KGV/ |
|
Branch CR30474 reviewed without remarks. |
|
Combination - OCCT branch : CR30474 SHA - 5eb3d759254d5bed3e21feef1116c8b4ca7efb5d Products branch : master SHA - 9aa25f353abc3855a46a51135af99c115d17b709 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16357.569999999962 / 16366.799999999954 [-0.06%] Products Total CPU difference: 7151.440000000013 / 7183.99000000004 [-0.45%] Windows-64-VC14: OCCT Total CPU difference: 17789.3125 / 17810.03125 [-0.12%] Products Total CPU difference: 8604.921875 / 8589.015625 [+0.19%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30474 has been deleted by kgv. SHA-1: 5eb3d759254d5bed3e21feef1116c8b4ca7efb5d |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-02-04 14:08 | kgv | New Issue | |
2019-02-04 14:08 | kgv | Assigned To | => kgv |
2019-02-04 14:08 | git | Note Added: 0082021 | |
2019-02-04 14:11 | kgv | Relationship added | child of 0030439 |
2019-02-04 14:11 | kgv | Description Updated | |
2019-02-04 15:46 | kgv | Note Added: 0082024 | |
2019-02-04 15:46 | kgv | Assigned To | kgv => san |
2019-02-04 15:46 | kgv | Status | new => resolved |
2019-02-04 15:53 |
|
Note Added: 0082025 | |
2019-02-04 15:53 |
|
Assigned To | san => bugmaster |
2019-02-04 15:53 |
|
Status | resolved => reviewed |
2019-02-04 16:35 | bugmaster | Test case number | => Not needed |
2019-02-04 16:43 | bugmaster | Note Added: 0082028 | |
2019-02-04 16:43 | bugmaster | Status | reviewed => tested |
2019-02-10 19:36 | bugmaster | Changeset attached | => occt master 976627e6 |
2019-02-10 19:36 | bugmaster | Status | tested => verified |
2019-02-10 19:36 | bugmaster | Resolution | open => fixed |
2019-03-05 13:46 | git | Note Added: 0082630 |