0030474: Visualization - fallback font is ignored for missing font alias within Font_FontMgr::FindFont()